kube/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app1-pod
  labels:
    app: app1
spec:
  containers:
    - name: app1-cnt
      image: ikozar22/docker-spring-test:latest
      volumeMounts:
          - name: app1-cfg
            mountPath: /etc/config
          - name: app1-sec
            mountPath: /etc/secret
            readOnly: true
  volumes:
    - name: app1-cfg
      configMap:
        name: config-app1
    - name: app1-sec
      secret:
        secretName: secret-app1
---
apiVersion: v1
kind: Pod
metadata:
  name: app2-pod
  labels:
    app: app2
spec:
  containers:
    - name: app2-cnt
      image: ikozar22/docker-spring-test2:latest
      volumeMounts:
          - name: app2-cfg
            mountPath: /etc/config
  volumes:
    - name: app2-cfg
      configMap:
        name: config-app2
