kube/app2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-dev1-pod
  labels:
    app: app-dev1
spec:
  containers:
    - name: app-dev1-cnt
      image: ikozar22/docker-spring-test:latest
      volumeMounts:
          - name: app-dev1-vol
            mountPath: /etc/config
  volumes:
    - name: app-dev1-vol
      configMap:
        name: config-dev1
---
apiVersion: v1
kind: Service
metadata:
  name: app-dev1-srv
spec:
  type: ClusterIP
  selector:
    app: app-dev1
#  clusterIP: None
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: app-dev2-pod
  labels:
    app: app-dev2
spec:
  containers:
    - name: app-dev2-cnt
      image: ikozar22/docker-spring-test2:latest
      volumeMounts:
          - name: app-dev2-vol
            mountPath: /etc/config
  volumes:
    - name: app-dev2-vol
      configMap:
        name: config-dev2
---
apiVersion: v1
kind: Service
metadata:
  name: app-dev2-srv
spec:
  type: ClusterIP
  ports:
    - name: app-dev2-port
      port: 8080
      targetPort: 8080
  selector:
    app: app-dev2
---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: bright-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#spec:
#  backend:
#    serviceName: app-dev1-srv
#    servicePort: 8080
#  rules:
#    - host: uat15.bnp.com
#      http:
#        paths:
#          - path: /etl/(.*)
#            backend:
#              serviceName: app-dev1-srv
#              servicePort: 8080
#          - path: /rt/(.*)
#            backend:
#              serviceName: app-dev2-srv
#              servicePort: 8080
