kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-srv
spec:
  type: ClusterIP
  selector:
    app: app1
#  clusterIP: None
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app2-srv
spec:
  type: ClusterIP
  ports:
    - name: app2-port
      port: 8080
      targetPort: 8080
  selector:
    app: app2
